# stm32-setup

./: README.md
guessing_game/: Cargo.toml  README.md
guessing_game/src/: game.rs  helper.rs  lcd.rs  main.rs  rc.rs
lcd/: Cargo.toml  README.MD
lcd/.cargo/: config.toml
lcd/src/: main.rs
rc/: Cargo.toml  README.md
rc/.cargo/: config.toml
rc/src/: main.rs
