[package]
name = "guessing_game"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
hd44780-driver = "0.4"
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"] }
embassy-stm32 = { version = "0.5", features = ["stm32l476rg", "time", "memory-x", "unstable-pac", "time-driver-any", "exti"] }
embassy-time = { version = "0.5", features = ["defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-sync = { version = "0.7", features = ["defmt"] }
defmt = "1.0"
defmt-rtt = "1.1"
panic-probe = "1.0"
infrared = "0.14"
heapless = { version = "0.9.2", features = ["defmt"] }
rand = { version = "0.10.0", default-features = false }
